--- a/chat.html
+++ b/chat.html
@@ -237,7 +237,7 @@
                 height: 140px;
                 margin-left: -70px;
                 margin-top: -70px;
-                background-image: url(../images/arecord.png);
+                background-image: url(images/arecord.png);
                 background-repeat: no-repeat;
                 background-position: center center;
                 background-size: 30px 30px;
